# S19-Team2

./: .babelrc  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  FlaskServer.py  README.md  __init__.py  package-lock.json  package.json
config/spyce_files/kernels/: dummyfile.txt
data/trajectory/: dummytext.txt
spyce/: CMakeLists.txt  py_wrapper.cpp  spyce_main.cpp
spyce/inc/: spyce.hpp  spyce_exceptions.hpp
src/: index.html
src/js/: MultipleSphereTry.html  index.js
src/js/models/: earth.js  moon.js
src/python/backend/: __init__.py
web/: index.html  index.js  store.js
web/actions/: spaceSceneActions.js
web/components/: CameraControls.js  SceneSwitchButton.js  ShowTagButton.js  SimulationControls.js  SpaceScene.js  SpeedSlider.js  SpeedSliderContainer.js  TimelineSlider.js  TrailControls.js  sceneHelper.js  sliderComponents.js  sliderUIMaterialComponents.js  spineCameraExample.js  splineExtrusion.html
web/components/sliders/: SpeedSlider.js  TimelineSlider.js  sliderComponents.js
web/components/toggleControls/: CameraControls.js  LabelControls.js  TrailControls.js
web/config/: config.js
web/js/: LensFlare.js  OrbitControls.js  index.js  three.js
web/js/models/: Sun.js  earth.js  moon.js  sun.js
web/libraries/: network_layer.js  position_store.js
web/models/: earth.js  moon.js  objectLabel.js  satellite.js  satelliteTrail.js
web/reducers/: index.js  spaceSceneReducer.js
web/styles/: colors.js  speedSlider.scss  styles.css  styles.scss  timeline.scss  variables.scss
web/textures/: texture.js
